# Fuzzy-Adaptive-Compliance-Control

./: README.md
fuzzy_core/: CMakeLists.txt  package.xml
fuzzy_core/config/: fuzzy_rules.yaml
fuzzy_core/scripts/: fuzzy_controller.py  fuzzy_monitor.py  sim_human_frame_subscriber.py
human_interface/: CMakeLists.txt  package.xml
human_interface/config/: vision_parameters.yaml
human_interface/launch/: task_e.launch
human_interface/scripts/: camera_modify.py  human_frame_subscriber.py  human_interface.py  kinect_recorder.py
kortex_speed_plan/: CMakeLists.txt  package.xml
kortex_speed_plan/config/: dynamical_parameters.yaml
kortex_speed_plan/launch/: task_e.launch
kortex_speed_plan/scripts/: act_data_collector.py  active_data_collector.py  apf_controller.py  data_collector.py  fuzzy_controller.py  jacobian_publisher.py  moveit_plan_not_using.py  naive_controller.py  pid_executer.py  pid_executer_moveit.py  pose_publisher copy 2.py  pose_publisher copy.py  pose_publisher.py  reference_selector.py  reposition.py  rrt_moveit_plan.py  rrt_moveit_plan_moveit_execution.py  sim_pid_executer.py  target_adapter.py  task copy 2.yaml  task copy 3.yaml  task copy 4.yaml  task copy 5.yaml  task copy.yaml  task.yaml  task_manager copy.py  task_manager.py  task_mission.yaml  (+2 more)
robots/: readme.md
robots/franka_test/: CMakeLists.txt
robots/franka_test/scripts/: cube_interface.py  pid_executer.py  sim_pid_executer.py
robots/franka_test/src/: franka_node.cpp
speed_adaptive_control/: CMakeLists.txt
speed_plan/: CMakeLists.txt  package.xml
videos/: readme.md
(+38 files in other folders)
